--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ ul {
   margin: 0;
   padding-left: 0;
 }
+img {
+  display: block;
+}
 .link {
   text-decoration: none;
 }
@@ -37,7 +40,7 @@ ul {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 .visually-hidden {
   position: absolute;
@@ -78,15 +81,16 @@ ul {
 
 .header {
   padding: 24px 0;
+  border-bottom: 1px solid #e7e9fc;
 }
 .header-navigation {
   display: flex;
   align-items: center;
-  gap: 76px;
 }
 .header-container {
   display: flex;
   justify-content: space-between;
+  padding: 24px 0;
 }
 .header-logo {
   font-family: 'Raleway', sans-serif;
@@ -96,6 +100,7 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-brand-color);
+  margin-right: 76px;
 }
 .header-logo-color {
   color: var(--title-color);
@@ -121,6 +126,7 @@ ul {
 .header-address-list {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 .header-address-link {
   line-height: 1.5;
@@ -136,7 +142,7 @@ ul {
   background-color: var(--title-color);
 }
 .hero-container {
-  padding: 188px;
+  padding: 188px 0;
 }
 .hero-title {
   font-size: 56px;
@@ -159,7 +165,7 @@ ul {
   background: var(--main-brand-color);
   border-radius: 4px;
   border: none;
-  min-width: 196px;
+  min-width: 169px;
   padding: 16px 32px;
   display: block;
   margin: 0 auto;
@@ -175,7 +181,7 @@ ul {
   gap: 24px;
 }
 .benefits-item {
-  flex-basis: calc((100% - 24px * 3) 4);
+  flex-basis: calc((100% - 72px) / 4);
 }
 .benefits-subtitle {
   margin-bottom: 8px;
@@ -200,6 +206,11 @@ ul {
   padding: 120px 0;
   background-color: var(--footer-color);
 }
+
+.team-desc {
+  text-align: center;
+  padding: 32px 16px;
+}
 .team-title {
   margin-bottom: 72px;
 }
@@ -213,13 +224,9 @@ ul {
   border-radius: 0px 0px 4px 4px;
 }
 .team-subtitle {
-  margin-top: 32px;
   margin-bottom: 8px;
-  text-align: center;
 }
 .team-text {
-  margin-bottom: 32px;
-  text-align: center;
 }
 
 /* *--------------------FOOTER------------- */
@@ -236,6 +243,8 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-brand-color);
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-color {
   color: var(--footer-color);
@@ -245,7 +254,6 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--footer-color);
-  margin-top: 17.5px;
   max-width: 264px;
 }
 
