--- a/css/styles.css
+++ b/css/styles.css
@@ -83,15 +83,18 @@ img {
   padding: 24px 0;
   border-bottom: 1px solid #e7e9fc;
 }
-.header-navigation {
-  display: flex;
-  align-items: center;
-}
 .header-container {
   display: flex;
   justify-content: space-between;
+  padding: 0 15px;
+  align-items: center;
+}
+.header-navigation {
+  display: flex;
+  align-items: center;
   padding: 24px 0;
 }
+
 .header-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
@@ -123,10 +126,10 @@ img {
 .header-address {
   font-style: normal;
 }
+
 .header-address-list {
   display: flex;
   gap: 40px;
-  align-items: center;
 }
 .header-address-link {
   line-height: 1.5;
@@ -140,9 +143,9 @@ img {
 /* *---------------------INDEX-MAIN----------------------- */
 .hero {
   background-color: var(--title-color);
+  padding: 188px 0;
 }
 .hero-container {
-  padding: 188px 0;
 }
 .hero-title {
   font-size: 56px;
