--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ img {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .visually-hidden {
   position: absolute;
